--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
 		"enabled": true
 	},
 	"files": {
-		"include": ["**/*.ts", "**/*.js"],
+		"include": ["**/*.ts", "**/*.js", "**/*.tsx"],
 		"ignore": ["node_modules", ".next"]
 	},
 	"vcs": {
@@ -25,6 +25,9 @@
 			"a11y": {
 				"useKeyWithClickEvents": "off",
 				"useKeyWithMouseEvents": "off"
+			},
+			"correctness": {
+				"noUnusedImports": "error"
 			}
 		}
 	},
@@ -45,5 +48,20 @@
 			"semicolons": "always",
 			"jsxQuoteStyle": "single"
 		}
-	}
+	},
+	"overrides": [
+		{
+			"include": ["./packages/design-system/**"],
+			"linter": {
+				"rules": {
+					"suspicious": {
+						"noArrayIndexKey": "off"
+					},
+					"correctness": {
+						"useExhaustiveDependencies": "off"
+					}
+				}
+			}
+		}
+	]
 }
