--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@jung/configs": "workspace:*",
     "@jung/typescript-config": "workspace:*",
+    "@jung/shared": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.24",
