--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -10,20 +10,16 @@
     "lint": "pnpm biome lint ./src --apply",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_d1438a99ea1ef1a"
   },
   "dependencies": {
+    "@jung/design-system": "workspace:*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@jung/design-system": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@jung/configs": "workspace:*",
-    "@vitejs/plugin-react-swc": "latest",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "vitest": "^1.3.1",
-    "@vanilla-extract/vite-plugin": "latest",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -34,8 +30,14 @@
     "@storybook/test": "^7.6.17",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@vanilla-extract/vite-plugin": "latest",
+    "@vitejs/plugin-react-swc": "latest",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
+    "chromatic": "^11.3.2",
     "storybook": "^7.6.17",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   }
 }
