--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -4,7 +4,12 @@ on:
   pull_request:
     branches:
       - main
-    paths: apps/workshop
+    paths: apps/workshop/**
+  push:
+    branches:
+      - main
+    paths:
+      - 'apps/workshop/**'
 
 jobs:
   storybook:
@@ -38,6 +43,7 @@ jobs:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: comment PR
+        if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
