--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: depedency install
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: publish to chromatic
         id: chromatic
