--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -14,32 +14,50 @@ on:
 jobs:
   storybook:
     runs-on: ubuntu-20.04
-    permissions:
-      pull-requests: write
-      actions: write
     outputs:
       status: ${{ job.status }}
     steps:
       - name: checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: cache dependencies
-        id: cache
+      - name: set up Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
+        with:
+          version: 8
+          run_install: false
+
+      - name: get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: setup pnpm cache
         uses: actions/cache@v3
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-storybook
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: depedency install
         if: steps.cache.outputs.cache-hit != 'true'
-        run: turbo install
+        run: pnpm install -no-frozen-lockfile
+        working-directory: apps/workshop
 
       - name: publish to chromatic
         id: chromatic
         uses: chromaui/action@v1
         with:
+          workingDir: apps/workshop
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: comment PR
