--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -36,14 +36,9 @@
     "@storybook/test": "^7.6.17",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@vanilla-extract/vite-plugin": "latest",
-    "@vitejs/plugin-react-swc": "latest",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
     "chromatic": "^11.3.2",
     "storybook": "^7.6.17",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "vite": "^5.1.4"
   }
 }
