chore: Install react to shared workspace

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,5 +13,8 @@
   },
   "dependencies": {
     "@jung/typescript-config": "workspace:*"
+  },
+  "devDependencies": {
+    "react": "^18.2.0"
   }
 }
