--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -19,8 +19,8 @@
     "@turbo/gen": "^1.12.4",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/dynamic": "^2.1.0",
@@ -32,6 +32,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react-dom": "^18.3.1"
   }
 }
