--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
